# graphene

./: .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  conanfile.py  graphene.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
applications/: CMakeLists.txt
applications/benchmark/: CMakeLists.txt  benchmark.cpp
applications/playground/: CMakeLists.txt  playground.cpp
cmake/: AddGPLibrary.cmake
conan/fast_matrix_market/: conanfile.py
data/benchmarks/: benchmark.py  ilu0.jsonc  ir_gs.jsonc  ir_pbicgstab_ilu0.jsonc  ir_pbicgstab_ilu0_double_precision.jsonc  ir_pbicgstab_ilu0_verbose.jsonc  ir_pbicgstab_ilu0_verbose_double_precision.jsonc  ir_pbicgstab_ilu0_verbose_nomixedprecision.jsonc  restarter_pbicgstab_ilu0_verbose.jsonc  spmv.jsonc  test.jsonc  test_cmd.jsonc
libgraphene/: CMakeLists.txt
libgraphene/libgraphene/: CMakeLists.txt
libgraphene/libgraphene/codelet/: CMakeLists.txt  Codelet.cpp  Codelet.hpp
libgraphene/libgraphene/codelet/ipu/: CMakeLists.txt  utils.cpp
libgraphene/libgraphene/codelet/ipu/matrix/crs/: Residual.cpp  SpMV.cpp
libgraphene/libgraphene/codelet/ipu/matrix/solvers/: gauss-seidel.cpp
libgraphene/libgraphene/codelet/ipu/matrix/solvers/ilu/: ilu-factorize.cpp  ilu-solve.cpp
libgraphene/libgraphene/codelet/ipu/tensor/: DoublePrecision.cpp  DoubleWord.cpp
libgraphene/libgraphene/common/: CMakeLists.txt  Concepts.hpp  Hash.hpp  Helpers.hpp  PoplarExtensions.hpp  Shape.hpp  TileMapping.hpp  Traits.hpp  Type.cpp  Type.hpp  Types.cpp  Types.hpp  VectorMap.hpp
libgraphene/libgraphene/common/tests/: CMakeLists.txt  ShapeTests.cpp  TypeTests.cpp  VectorMapTests.cpp
libgraphene/libgraphene/dsl/: AnyValue.hpp  CMakeLists.txt  ControlFlow.cpp  ControlFlow.hpp  Expression.cpp  Expression.hpp  HostTensor.cpp  HostTensor.hpp  HostTensorVariant.hpp  HostValue.cpp  HostValue.hpp  HostValueVariant.hpp  OperatorTraits.hpp  Operators.cpp  Operators.hpp  RemoteTensor.cpp  RemoteTensorVariant.hpp  RemoteValue.cpp  RemoteValue.hpp  RemoteValueVariant.hpp  Tensor.cpp  Tensor.hpp  TensorVariant.hpp  Traits.hpp  Value.cpp  Value.hpp  ValueVariant.hpp
libgraphene/libgraphene/dsl/code/: CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  ControlFlow.cpp  ControlFlow.hpp  Execute.cpp  Execute.hpp  Function.cpp  Function.hpp  Operators.cpp  Operators.hpp  Value.cpp  Value.hpp  Vertex.cpp  Vertex.hpp  VertexTypes.cpp  VertexTypes.hpp
libgraphene/libgraphene/dsl/code/details/: Operators.hpp.inc
libgraphene/libgraphene/dsl/code/types/: ArrayType.cpp  ArrayType.hpp
libgraphene/libgraphene/dsl/codelet/: CodeGen.cpp  CodeGen.hpp  ControlFlow.cpp  ControlFlow.hpp  Execute.hpp  Function.hpp  Operators.cpp  Operators.hpp  Value.cpp  Value.hpp  Vertex.hpp  VertexTypes.cpp  VertexTypes.hpp
libgraphene/libgraphene/dsl/common/: CMakeLists.txt
libgraphene/libgraphene/dsl/common/details/: Expressions.cpp  Expressions.hpp
libgraphene/libgraphene/dsl/details/: OperatorTraits.hpp
libgraphene/libgraphene/dsl/tensor/: CMakeLists.txt  ControlFlow.cpp  ControlFlow.hpp  Execute.hpp  Expression.cpp  Expression.hpp  HostTensor.cpp  HostTensor.hpp  HostTensorVariant.hpp  Operators.cpp  Operators.hpp  PrintTensorFormat.hpp  RemoteTensor.cpp  RemoteTensor.hpp  RemoteTensorVariant.hpp  Tensor.cpp  Tensor.hpp  TensorVariant.hpp  Traits.hpp
libgraphene/libgraphene/dsl/tensor/details/: Expressions.cpp  Expressions.hpp  OperatorTraits.hpp
libgraphene/libgraphene/dsl/tensor/optimization/: ExpressionOptimizer.cpp  ExpressionOptimizer.hpp  InputExprDeduplication.cpp  InputExprDeduplication.hpp
libgraphene/libgraphene/dsl/tensor/tests/: TensorTests.cpp
libgraphene/libgraphene/matrix/: Addressing.hpp  CMakeLists.txt  Coloring.hpp  Matrix.cpp  Matrix.hpp  MatrixFormat.hpp  Norm.cpp  Norm.hpp
libgraphene/libgraphene/matrix/details/: MatrixBase.cpp  MatrixBase.hpp
libgraphene/libgraphene/matrix/details/crs/: CRSAddressing.hpp  CRSMatrix.cpp  CRSMatrix.hpp
libgraphene/libgraphene/matrix/details/ldu/: LDUAddressing.hpp  LDUMatrix.cpp  LDUMatrix.hpp
libgraphene/libgraphene/matrix/host/: DistributedTileLayout.cpp  DistributedTileLayout.hpp  HostMatrix.cpp  HostMatrix.hpp  TileLayout.cpp  TileLayout.hpp
libgraphene/libgraphene/matrix/host/details/: CoordinateFormat.cpp  CoordinateFormat.hpp  HostMatrixBase.cpp  HostMatrixBase.hpp  MatrixMarket.cpp  MatrixMarket.hpp  Poisson.cpp  Poisson.hpp
libgraphene/libgraphene/matrix/host/details/crs/: CRSHostMatrix.cpp  CRSHostMatrix.hpp
libgraphene/libgraphene/matrix/host/formats/: Common.cpp  Common.hpp
libgraphene/libgraphene/matrix/solver/: Configuration.cpp  Configuration.hpp  Solver.cpp  Solver.hpp  SolverStats.cpp  SolverStats.hpp
libgraphene/libgraphene/matrix/solver/gauss-seidel/: Configuration.cpp  Configuration.hpp  Solver.cpp  Solver.hpp
libgraphene/libgraphene/matrix/solver/ilu/: Configuration.cpp  Configuration.hpp  Solver.cpp  Solver.hpp
libgraphene/libgraphene/matrix/solver/iterative-refinement/: Configuration.cpp  Configuration.hpp  Solver.cpp  Solver.hpp
libgraphene/libgraphene/matrix/solver/pbicgstab/: Configuration.cpp  Configuration.hpp  Solver.cpp  Solver.hpp
libgraphene/libgraphene/matrix/solver/restarter/: Configuration.cpp  Configuration.hpp  Solver.cpp  Solver.hpp
libgraphene/libgraphene/util/: CMakeLists.txt  Context.cpp  Context.hpp  DebugInfo.cpp  DebugInfo.hpp  PoplarHelpers.cpp  PoplarHelpers.hpp  Runtime.cpp  Runtime.hpp  TargetType.hpp  Tracepoint.cpp  Tracepoint.hpp  VertexCache.cpp  VertexCache.hpp
